create endpoint for address
